fix position of bottom buttons in fullscreen map on mobile

--- a/less/map/layertreeselector.less
+++ b/less/map/layertreeselector.less
@@ -21,3 +21,9 @@ app-layertree-selector { /* stylelint-disable-line selector-type-no-unknown */
     width: auto;
   }
 }
+
+@media @phone {
+  .map-fullscreen app-layertree-selector { /* stylelint-disable-line selector-type-no-unknown */
+    bottom: 75px;
+  }
+}
